# I4.0-NEW

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md
.github/: FUNDING.yml
Client/: pyproject.toml  setup.py
Client/CLI/: pyproject.toml
Client/CLI/I40ClientCLI/: main.py
Client/Client/: pyproject.toml
Client/Client/I40Client/: configuration.py  encryption.py  server_connection.py
Client/ClientCS/: configuration.cs  encryption.cs  server_connection.cs
Client/I40Client/: __main__.py  server_connection.py
Client/I40Client/Utilities/: chatbot_tools.py  format_conversion.py  internet.py
Client/Utils/: pyproject.toml
Client/Utils/I40ClientUtils/: chatbot_tools.py  format_conversion.py  internet.py
Documentation/ClientDocs/: 01 Installation and hardware requirements.md  02 Configuring.md  03 Utilities.md  04 Basic CLI client.md
Documentation/ServerDocs/: 01 Installation and hardware requirements.md  02 Starting and configuring.md  03 Server arguments and commands.md  04 Modules.md
Server/: Dockerfile  encryption.py  exceptions.py  keys_manager.py  messages.py  requirements.py  server.py  services_manager.py  services_queue.py
Server/Configuration/: config.py  default_configuration.yaml  default_configuration_database.yaml  default_configuration_server.yaml
Server/DisabledModules/: README.md
Server/EnabledModules/: README.md  download_official_modules.sh  update_modules.sh
Server/Services/chatbot/: README.md  default_service_configuration.yaml  llama_utils.py  requirements.py  service.py  system_prompt.py  tools.py
Server/Services/imgclass/: default_service_configuration.yaml  hf.py  requirements.txt  service.py
Server/Services/imggen/: requirements.py  (+3 more)
Server/Utilities/: format_conversion.py  gpu_utils.py  install_requirements.py  internet.py  logs.py  model_utils.py  server_utils.py  torch_utils.py
(+15 files in other folders)
